# EXkururuSOC

./: .env.example  .gitignore  Dockerfile  README.4stack.md  README.en.md  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
rust_feedback_bench/: Cargo.toml
rust_feedback_bench/src/: main.rs
scripts/: benchmark_feedback_py_vs_rust.py  benchmark_feedback_python.py  demo_4stack.sh  migrate.py  run_dev.sh
src/exkururusoc/: api.py  app_context.py  cli.py  config.py  storage.py  storage_facade.py
src/exkururusoc/routers/: __init__.py  candidates.py  evaluations_rollouts.py  health.py  policies_decision.py  safety_runbooks_feedback.py  sources_dashboard.py
tests/: conftest.py  test_auth_boundary.py  test_candidates_flow.py  test_dashboard_escape.py  test_feedback_auto_candidates_errors.py  test_replay_cache.py  test_rollout_errors.py  test_runbook_errors.py  test_sources_heartbeat_auth.py
